--- a/TransitHubXAML/EditAccountBirthdayPage.xaml
+++ b/TransitHubXAML/EditAccountBirthdayPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="TransitHubXAML.EditAccountBirthdayPage"
+<Page x:Class="TransitHubXAML.EditAccountBirthdayPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -7,7 +7,7 @@
       mc:Ignorable="d" 
       Title="EditAccountBirthdayPage" Height="800" Width="450">
     <Grid>
-        <ComboBox Style="{StaticResource {x:Static ToolBar.ComboBoxStyleKey}}" HorizontalAlignment="Left" Height="43" Margin="47,228,0,0" VerticalAlignment="Top" Width="166" BorderBrush="#FFABADB3" FontSize="22">
+        <ComboBox x:Name="monthText" Style="{StaticResource {x:Static ToolBar.ComboBoxStyleKey}}" HorizontalAlignment="Left" Height="43" Margin="47,228,0,0" VerticalAlignment="Top" Width="166" BorderBrush="#FFABADB3" FontSize="22">
             <ComboBoxItem IsSelected="True" Content="Month"/>
             <ComboBoxItem Content="January"/>
             <ComboBoxItem Content="February"/>
@@ -22,13 +22,13 @@
             <ComboBoxItem Content="November"/>
             <ComboBoxItem Content="December"/>
         </ComboBox>
-        <TextBox HorizontalAlignment="Left" Height="42" Margin="222,229,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="79" Text="Day" FontSize="22" TextAlignment="Center" VerticalContentAlignment="Center"/>
-        <TextBox HorizontalAlignment="Left" Height="42" Margin="313,229,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="89" Text="Year" FontSize="22" TextAlignment="Center" VerticalContentAlignment="Center" RenderTransformOrigin="1.718,0.667"/>
+        <TextBox x:Name="dayText" HorizontalAlignment="Left" Height="42" Margin="222,229,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="79" FontSize="22" TextAlignment="Center" VerticalContentAlignment="Center"/>
+        <TextBox x:Name="yearText" HorizontalAlignment="Left" Height="42" Margin="313,229,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="89" FontSize="22" TextAlignment="Center" VerticalContentAlignment="Center" RenderTransformOrigin="1.718,0.667"/>
         <Label Content="Enter Birthday" HorizontalAlignment="Left" Margin="40,191,0,0" VerticalAlignment="Top" Height="44" Width="173" FontSize="22"/>
         <Image MouseDown="Back_Click" HorizontalAlignment="Left" Height="40" VerticalAlignment="Top" Width="64" Source="Resources/back-arrow.png" Margin="30,30,0,0"/>
         <TextBlock FontSize="30" Margin="149,30,118,702.5" Text="Edit Birthday"/>
-        <Button Content="Confirm" HorizontalAlignment="Left" Margin="227,665,0,0" VerticalAlignment="Top" Width="223" Height="70" FontSize="30" Background="#FFC43A3F" Foreground="White"/>
-        <Button Content="Cancel" HorizontalAlignment="Left" Margin="4,665,0,0" VerticalAlignment="Top" Width="223" Height="70" FontSize="30"/>
+        <Button Content="Confirm" HorizontalAlignment="Left" Margin="227,665,0,0" VerticalAlignment="Top" Width="223" Height="70" FontSize="30" Background="#FFC43A3F" Foreground="White" Click="Button_Click_1"/>
+        <Button Content="Cancel" HorizontalAlignment="Left" Margin="4,665,0,0" VerticalAlignment="Top" Width="223" Height="70" FontSize="30" Click="Button_Click"/>
 
     </Grid>
 </Page>
