--- a/TransitHubXAML/EditAccountEmailPage.xaml
+++ b/TransitHubXAML/EditAccountEmailPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="TransitHubXAML.EditAccountEmailPage"
+<Page x:Class="TransitHubXAML.EditAccountEmailPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -8,12 +8,12 @@
       Title="EditAccountEmailPage" Height="800" Width="450">
     <Grid>
         <Label Content="New Email" HorizontalAlignment="Left" Margin="30,134,0,0" VerticalAlignment="Top" Height="44" Width="173" FontSize="22"/>
-        <TextBox HorizontalAlignment="Left" Height="42" Margin="30,178,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="390"/>
-        <TextBox HorizontalAlignment="Left" Height="42" Margin="30,306,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="390"/>
+        <TextBox x:Name="emailText" FontSize="24" HorizontalAlignment="Left" Height="42" Margin="30,178,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="390"/>
+        <TextBox x:Name="confirmEmailText" FontSize="24" HorizontalAlignment="Left" Height="42" Margin="30,306,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="390"/>
         <Label Content="Confirm Email" HorizontalAlignment="Left" Margin="30,262,0,0" VerticalAlignment="Top" Height="44" Width="173" FontSize="22"/>
         <Image MouseDown="Back_Click" HorizontalAlignment="Left" Height="40" VerticalAlignment="Top" Width="64" Source="Resources/back-arrow.png" Margin="30,30,0,0"/>
         <TextBlock FontSize="30" Margin="161,30,106,702.5" Text="Edit Email"/>
-        <Button Content="Confirm" HorizontalAlignment="Left" Margin="227,665,0,0" VerticalAlignment="Top" Width="223" Height="70" FontSize="30" Background="#FFC43A3F" Foreground="White"/>
-        <Button Content="Cancel" HorizontalAlignment="Left" Margin="4,665,0,0" VerticalAlignment="Top" Width="223" Height="70" FontSize="30"/>
+        <Button Content="Confirm" HorizontalAlignment="Left" Margin="227,665,0,0" VerticalAlignment="Top" Width="223" Height="70" FontSize="30" Background="#FFC43A3F" Foreground="White" Click="Button_Click_1"/>
+        <Button Content="Cancel" HorizontalAlignment="Left" Margin="4,665,0,0" VerticalAlignment="Top" Width="223" Height="70" FontSize="30" Click="Button_Click"/>
     </Grid>
 </Page>
