--- a/TransitHubXAML/EditAccountNamePage.xaml
+++ b/TransitHubXAML/EditAccountNamePage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="TransitHubXAML.EditAccountNamePage"
+<Page x:Class="TransitHubXAML.EditAccountNamePage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -8,13 +8,13 @@
       Title="EditAccountNamePage" Height="800" Width="450">
     <Grid>
         <Label Content="First Name" HorizontalAlignment="Left" Margin="49,141,0,0" VerticalAlignment="Top" Height="44" Width="173" FontSize="22"/>
-        <TextBox HorizontalAlignment="Left" Height="42" Margin="56,178,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="166"/>
-        <TextBox HorizontalAlignment="Left" Height="42" Margin="231,178,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="179"/>
+        <TextBox x:Name="firstNameText" FontSize="24" HorizontalAlignment="Left" Height="42" Margin="56,178,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="166"/>
+        <TextBox x:Name="lastNameText" FontSize="24" HorizontalAlignment="Left" Height="42" Margin="231,178,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="179"/>
         <Label Content="Last Name" HorizontalAlignment="Left" Margin="227,141,0,0" VerticalAlignment="Top" Height="44" Width="173" FontSize="22"/>
         <Image MouseDown="Back_Click" HorizontalAlignment="Left" Height="40" VerticalAlignment="Top" Width="64" Source="Resources/back-arrow.png" Margin="30,30,0,0"/>
         <TextBlock FontSize="30" Margin="154,30,113,702.5" Text="Edit Name"/>
-        <Button Content="Confirm" HorizontalAlignment="Left" Margin="227,665,0,0" VerticalAlignment="Top" Width="223" Height="70" FontSize="30" Background="#FFC43A3F" Foreground="White"/>
-        <Button Content="Cancel" HorizontalAlignment="Left" Margin="4,665,0,0" VerticalAlignment="Top" Width="223" Height="70" FontSize="30"/>
+        <Button Content="Confirm" HorizontalAlignment="Left" Margin="227,665,0,0" VerticalAlignment="Top" Width="223" Height="70" FontSize="30" Background="#FFC43A3F" Foreground="White" Click="Button_Click_1"/>
+        <Button Content="Cancel" HorizontalAlignment="Left" Margin="4,665,0,0" VerticalAlignment="Top" Width="223" Height="70" FontSize="30" Click="Button_Click"/>
 
     </Grid>
 
