--- a/TransitHubXAML/Wallet.xaml
+++ b/TransitHubXAML/Wallet.xaml
@@ -8,12 +8,62 @@
         Title="Store" Height="800" Width="450"
         >
 
+    <Page.Resources>
+        <SolidColorBrush x:Key="RedBrush" Color="White"/>
+
+        <SolidColorBrush x:Key="SolidBorderBrush" Color="#888" />
+
+        <SolidColorBrush x:Key="GreenBrush" Color="#B83A3F" />
+
+        <SolidColorBrush x:Key="DisabledBackgroundBrush" Color="#EEE" />
+
+        <SolidColorBrush x:Key="DisabledBorderBrush" Color="#AAA" />
+
+        <SolidColorBrush x:Key="DisabledForegroundBrush" Color="#888" />
+
+        <Style TargetType="{x:Type TabItem}">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type TabItem}">
+                        <Grid>
+                            <Border 
+                                Name="Border"
+                                Margin="0,0,-4,0" 
+                                Background="{StaticResource RedBrush}"
+                                BorderBrush="{StaticResource  SolidBorderBrush}" 
+                                BorderThickness="1,1,1,1" 
+                                CornerRadius="2,12,0,0" >
+                                <ContentPresenter x:Name="ContentSite"
+                                    VerticalAlignment="Center"
+                                    HorizontalAlignment="Center"
+                                    ContentSource="Header"
+                                    Margin="12,2,12,2"
+                                    RecognizesAccessKey="True"/>
+                            </Border>
+                        </Grid>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsSelected" Value="True">
+                                <Setter Property="Panel.ZIndex" Value="100" />
+                                <Setter TargetName="Border" Property="Background" Value="{StaticResource GreenBrush}" />
+                                <Setter TargetName="Border" Property="BorderThickness" Value="1,1,1,0" />
+                            </Trigger>
+                            <Trigger Property="IsEnabled" Value="False">
+                                <Setter TargetName="Border" Property="Background" Value="{StaticResource DisabledBackgroundBrush}" />
+                                <Setter TargetName="Border" Property="BorderBrush" Value="{StaticResource DisabledBorderBrush}" />
+                                <Setter Property="Foreground" Value="{StaticResource DisabledForegroundBrush}" />
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </Page.Resources>
+
     <Grid>
 		<TabControl HorizontalAlignment="Left" Height="700" VerticalAlignment="Top" Width="450" >
-			<TabItem  Header="TICKETS" FontSize="55" Margin="0,0,-4,-2">
-				<Canvas>
-					<Rectangle Fill="#B83A3F" Height="7" Stroke="Black" Width="472" Canvas.Left="-18"/>
-					<Label Content="Adult Monthly Pass - Feb" Height="45" Canvas.Top="25" Width="300" Canvas.Left="10" FontSize="24"/>
+            <TabItem  Header="Tickets" FontSize="30" Width="220">
+                <Canvas>
+                    <Label Content="Adult Monthly Pass - Feb" Height="45" Canvas.Top="25" Width="300" Canvas.Left="10" FontSize="24"/>
 					<Label Content="Purchased: Feb 02, 2021" FontSize="16" Canvas.Left="10" Canvas.Top="60" />
 					<Button Content="View" Height="45" Width="100" FontSize="24" HorizontalContentAlignment="Center" Canvas.Right="20" Canvas.Top="38"/>
 					<Rectangle Fill="Gray" Height="7" Stroke="Black" Width="472" Canvas.Left="-28" Canvas.Top="115"/>
@@ -36,30 +86,26 @@
 				</Canvas>
 			</TabItem>
 
-			<TabItem Header="HISTORY" FontSize="55" Margin="6,0,-17,-2">
-				<Canvas>
-					<Rectangle Fill="#B83A3F" Height="7" Stroke="Black" Width="472" Canvas.Left="-18"/>
-					<Label Content="Adult Monthly Pass - Jan" Height="39" Canvas.Top="25" Width="300" Canvas.Left="10" FontSize="24"/>
-					<Label Content="Purchased: Dec 30, 2020" FontSize="16" Canvas.Left="10" Canvas.Top="60" />
-					<Label Content="Expired: Jan 31, 2021" FontSize="16" Canvas.Left="10" Canvas.Top="90" Foreground="Red"/>
-					<Rectangle Fill="Gray" Height="7" Stroke="Black" Width="472" Canvas.Left="-28" Canvas.Top="140"/>
-					<Label Content="Adult Ticket" Height="39" Canvas.Top="165" Width="300" Canvas.Left="10" FontSize="24"/>
-					<Label Content="Purchased: Jan 15, 2021" FontSize="16" Canvas.Left="10" Canvas.Top="200" />
-					<Label Content="Used: Jan 20, 2021" FontSize="16" Canvas.Left="10" Canvas.Top="230" Foreground="Red"/>
-					<Rectangle Fill="Gray" Height="7" Stroke="Black" Width="472" Canvas.Left="-28" Canvas.Top="280"/>
-					<Label Content="Adult Ticket" Height="39" Canvas.Top="305" Width="300" Canvas.Left="10" FontSize="24"/>
-					<Label Content="Purchased: Jan 1, 2021" FontSize="16" Canvas.Left="10" Canvas.Top="340" />
-					<Label Content="Used: Jan 1, 2021" FontSize="16" Canvas.Left="10" Canvas.Top="370" Foreground="Red"/>
-					<Rectangle Fill="Gray" Height="7" Stroke="Black" Width="472" Canvas.Left="-28" Canvas.Top="420"/>
-					<Label Content="Youth Ticket" Height="39" Canvas.Top="445" Width="300" Canvas.Left="10" FontSize="24"/>
-					<Label Content="Purchased: Dec 3, 2020" FontSize="16" Canvas.Left="10" Canvas.Top="480" />
-					<Label Content="Expired: Dec 10, 2020" FontSize="16" Canvas.Left="10" Canvas.Top="510" Foreground="Red"/>
-					<Rectangle Fill="Gray" Height="7" Stroke="Black" Width="472" Canvas.Left="-28" Canvas.Top="560"/>
-				</Canvas>
-			</TabItem>
-
-
-
-		</TabControl>
+            <TabItem Header="History" FontSize="30" Width="220">
+                <Canvas>
+                    <Label Content="Adult Monthly Pass - Jan" Height="39" Canvas.Top="25" Width="300" Canvas.Left="10" FontSize="24"/>
+                    <Label Content="Purchased: Dec 30, 2020" FontSize="16" Canvas.Left="10" Canvas.Top="60" />
+                    <Label Content="Expired: Jan 31, 2021" FontSize="16" Canvas.Left="10" Canvas.Top="90" Foreground="Red"/>
+                    <Rectangle Fill="Gray" Height="7" Stroke="Black" Width="472" Canvas.Left="-28" Canvas.Top="140"/>
+                    <Label Content="Adult Ticket" Height="39" Canvas.Top="165" Width="300" Canvas.Left="10" FontSize="24"/>
+                    <Label Content="Purchased: Jan 15, 2021" FontSize="16" Canvas.Left="10" Canvas.Top="200" />
+                    <Label Content="Used: Jan 20, 2021" FontSize="16" Canvas.Left="10" Canvas.Top="230" Foreground="Red"/>
+                    <Rectangle Fill="Gray" Height="7" Stroke="Black" Width="472" Canvas.Left="-28" Canvas.Top="280"/>
+                    <Label Content="Adult Ticket" Height="39" Canvas.Top="305" Width="300" Canvas.Left="10" FontSize="24"/>
+                    <Label Content="Purchased: Jan 1, 2021" FontSize="16" Canvas.Left="10" Canvas.Top="340" />
+                    <Label Content="Used: Jan 1, 2021" FontSize="16" Canvas.Left="10" Canvas.Top="370" Foreground="Red"/>
+                    <Rectangle Fill="Gray" Height="7" Stroke="Black" Width="472" Canvas.Left="-28" Canvas.Top="420"/>
+                    <Label Content="Youth Ticket" Height="39" Canvas.Top="445" Width="300" Canvas.Left="10" FontSize="24"/>
+                    <Label Content="Purchased: Dec 3, 2020" FontSize="16" Canvas.Left="10" Canvas.Top="480" />
+                    <Label Content="Expired: Dec 10, 2020" FontSize="16" Canvas.Left="10" Canvas.Top="510" Foreground="Red"/>
+                    <Rectangle Fill="Gray" Height="7" Stroke="Black" Width="472" Canvas.Left="-28" Canvas.Top="560"/>
+                </Canvas>
+            </TabItem>
+        </TabControl>
     </Grid>
 </Page>
