--- a/TransitHubXAML/ticketDisplay.xaml
+++ b/TransitHubXAML/ticketDisplay.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="TransitHubXAML.ticketDisplay"
+﻿<Page x:Class="TransitHubXAML.ticketDisplay"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -47,4 +47,4 @@
             <TextBlock Text="NAV BAR HERE" Foreground="Black" Grid.Row="4" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         </Grid>
     </Grid>
-</Window>
+</Page>
