--- a/TransitHubXAML/loginPage.xaml
+++ b/TransitHubXAML/loginPage.xaml
@@ -25,7 +25,7 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="30"/>
         </Grid.RowDefinitions>
-        <TextBlock Grid.Column="1" Grid.Row="1" FontSize="30" Grid.ColumnSpan="2" Margin="91,0,90,0">
+        <TextBlock Grid.Column="1" FontSize="30" Grid.ColumnSpan="2" Margin="92,19,89,0" Foreground="White">
             Welcome Back!
         </TextBlock>
         <Label Content="Email " Grid.Column="2" HorizontalAlignment="Left" Margin="10,117,0,0" Grid.Row="4" VerticalAlignment="Top" Height="44" Width="173" FontSize="22"/>
@@ -34,15 +34,16 @@
         <PasswordBox x:Name="passwordBox" MaxLength="21" Grid.Column="2" HorizontalAlignment="Left" Height="42" Margin="18,251,0,0" Grid.Row="4" VerticalAlignment="Top" Width="354" FontSize="24"/>
         <TextBox x:Name="passwordUnmask" Visibility="Hidden" MaxLength="21" Grid.Column="2" HorizontalAlignment="Left" Height="42" Margin="18,251,0,0" Grid.Row="4" VerticalAlignment="Top" Width="354" FontSize="24"/>
         <Button Style="{StaticResource RedButton}" Content="Log In" Click="Login_Click" HorizontalAlignment="Left" Margin="18,355,0,0" VerticalAlignment="Top" Width="354" Height="49" FontSize="22" Background="#FFB83A3F" Foreground="White" Grid.Column="2" Grid.Row="4"/>
-        <Label x:Name="forgotPassText" Content="Forgot Password?" Grid.Column="2" HorizontalAlignment="Left" Height="34" Margin="250,298,0,0" Grid.Row="4" VerticalAlignment="Top" Width="121" FontSize="14"/>
+        <Label x:Name="forgotPassText" Content="Forgot Password?" MouseDown="Forgot_Click" Grid.Column="2" HorizontalAlignment="Left" Height="34" Margin="250,298,0,0" Grid.Row="4" VerticalAlignment="Top" Width="121" FontSize="14"/>
         <Label Content="Don't have an account? " Grid.Column="2" HorizontalAlignment="Left" Height="34" Margin="48,414,0,0" Grid.Row="4" VerticalAlignment="Top" Width="199" FontSize="18"/>
         <Label Content="Create one" MouseDown="Create_Click" Grid.Column="2" HorizontalAlignment="Left" Height="34" Margin="238,414,0,0" Grid.Row="4" VerticalAlignment="Top" Width="117" FontSize="18" Foreground="#FFC43A3F"/>
-        <Image Grid.Column="2" MouseDown="Back_Click" HorizontalAlignment="Left" Height="40" Grid.Row="1" VerticalAlignment="Top" Width="69" Source="Resources/back-arrow.png"/>
+        <Image Grid.Column="2" MouseDown="Back_Click" HorizontalAlignment="Left" Height="40" VerticalAlignment="Top" Width="69" Source="Resources/back-arrow-white.png" Margin="0,20,0,0" Grid.RowSpan="2"/>
         <Label x:Name="loginErrorText" Content="Login Error" Grid.Column="2" HorizontalAlignment="Left" Height="34" Margin="12,199,0,0" Grid.Row="4" VerticalAlignment="Top" Width="322" FontSize="16" Foreground="#FFCB3A40"/>
         <CheckBox x:Name="rememberCheckBox" Content="CheckBox" Grid.Column="2" HorizontalAlignment="Left" Height="12" Margin="18,307,0,0" Grid.Row="4" VerticalAlignment="Top" Width="11"/>
         <Label x:Name="rememberText" Content="Remember Me" Grid.Column="2" HorizontalAlignment="Left" Height="34" Margin="31,298,0,0" Grid.Row="4" VerticalAlignment="Top" Width="121" FontSize="14"/>
         <Image x:Name="viewEye" Grid.Column="2" MouseDown="View_Password_Click" HorizontalAlignment="Left" Height="33" Margin="331,255,0,0" Grid.Row="4" VerticalAlignment="Top" Width="35" Source="Resources/invisible.png"/>
         <Image x:Name="hideEye" Grid.Column="2" Visibility="Hidden"  MouseDown="Hide_Password_Click" HorizontalAlignment="Left" Height="33" Margin="331,255,0,0" Grid.Row="4" VerticalAlignment="Top" Width="35" Source="Resources/eye.png"/>
+        <Rectangle Fill="#B83A3F" Panel.ZIndex="-1" HorizontalAlignment="Left" Height="77" Stroke="{x:Null}" StrokeThickness="0.5" VerticalAlignment="Top" Width="450" Grid.ColumnSpan="4" Grid.RowSpan="5"/>
 
     </Grid>
 
