--- a/TransitHubXAML/AccountPaymentMethodsPage.xaml
+++ b/TransitHubXAML/AccountPaymentMethodsPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="TransitHubXAML.AccountPaymentMethodsPage"
+<Page x:Class="TransitHubXAML.AccountPaymentMethodsPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
