--- a/TransitHubXAML/AccountReceiptsPage.xaml
+++ b/TransitHubXAML/AccountReceiptsPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="TransitHubXAML.AccountReceiptsPage"
+<Page x:Class="TransitHubXAML.AccountReceiptsPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -12,14 +12,14 @@
         <TextBlock FontSize="30" Margin="129,30,88,702.5" Text="Purchase History"/>
         <TextBlock FontSize="30" Margin="10,122,249,610.5" Text="Past Receipts"/>
         <TextBlock FontSize="25" Margin="10,202,249,530.5" Text="Receipt #00002"/>
-        <TextBlock FontSize="30" Margin="249,202,10,530.5" Text="Total: $12.85" HorizontalAlignment="Right" />
+        <TextBlock FontSize="30" Margin="249,202,10,530.5" Text="Total: $10.50" HorizontalAlignment="Right" />
         <TextBlock FontSize="25" Margin="10,247,249,485.5" Text="March 26, 2021"/>
-        <Button Content="View Receipt" HorizontalAlignment="Left" Margin="10,300,0,0" VerticalAlignment="Top" Width="425" Height="50" FontSize="25"/>
+        <Button Content="View Receipt" HorizontalAlignment="Left" Margin="10,300,0,0" VerticalAlignment="Top" Width="425" Height="50" FontSize="25" Click="Button_Click"/>
         <Rectangle Fill="LightGray" Stroke="LightGray" Margin="0,366,0,422"/>
         <TextBlock FontSize="25" Margin="10,378,249,354.5" Text="Receipt #00001"/>
         <TextBlock FontSize="30" Margin="0,378,10,354.5" Text="Total: $3.50" HorizontalAlignment="Right" />
         <TextBlock FontSize="25" Margin="10,423,249,309.5" Text="Feb 06, 2021"/>
-        <Button Content="View Receipt" HorizontalAlignment="Left" Margin="10,476,0,0" VerticalAlignment="Top" Width="425" Height="50" FontSize="25"/>
+        <Button Content="View Receipt" HorizontalAlignment="Left" Margin="10,476,0,0" VerticalAlignment="Top" Width="425" Height="50" FontSize="25" Click="Button_Click_1"/>
         <Rectangle Fill="LightGray" Stroke="LightGray" Margin="0,190,0,598"/>
         <Rectangle Fill="LightGray" Stroke="LightGray" Margin="0,546,0,242"/>
 
