--- a/TransitHubXAML/Login.xaml
+++ b/TransitHubXAML/Login.xaml
@@ -35,7 +35,7 @@
         <Rectangle Grid.Column="2" Fill="White" HorizontalAlignment="Left" Height="12" Margin="18,328,0,0" Grid.Row="4" Stroke="Black" VerticalAlignment="Top" Width="12"/>
         <Label Content="Don't have an account? " Grid.Column="2" HorizontalAlignment="Left" Height="34" Margin="48,606,0,0" Grid.Row="4" VerticalAlignment="Top" Width="199" FontSize="18"/>
         <Label Content="Create one" Grid.Column="2" HorizontalAlignment="Left" Height="34" Margin="238,606,0,0" Grid.Row="4" VerticalAlignment="Top" Width="117" FontSize="18" Foreground="#FFC43A3F"/>
-        <Image Grid.Column="2" HorizontalAlignment="Left" Height="40" Grid.Row="1" VerticalAlignment="Top" Width="69" Source="back-arrow.png"/>
+        <Image Grid.Column="2" HorizontalAlignment="Left" Height="40" Grid.Row="1" VerticalAlignment="Top" Width="69" Source="resources\back-arrow.png"/>
 
     </Grid>
 </Window>
