--- a/TransitHubXAML/cartPage.xaml
+++ b/TransitHubXAML/cartPage.xaml
@@ -11,7 +11,7 @@
     <ScrollViewer VerticalScrollBarVisibility="Auto">
         <Grid RenderTransformOrigin="0.493,0.585">
 
-            <Label Content="Items In Cart" Foreground="White" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="112,7,0,0" Height="58" Width="280" FontSize="40" FontFamily="Open Sans"/>
+            <Label Content="Cart" Foreground="White" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="192,10,0,0" Height="58" Width="68" FontSize="30" FontFamily="Open Sans"/>
             <Label Content="Adult Ticket" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="22,76,0,0" TextOptions.TextFormattingMode="Display" FontSize="20"/>
             <Label Content="$3.50" HorizontalAlignment="Left" Margin="22,125,0,0" VerticalAlignment="Top" FontSize="20"/>
             <Label Name="adultTicketAmountLabel" Content="0" HorizontalAlignment="Left" Margin="306,104,0,0" VerticalAlignment="Top" FontSize="20"/>
@@ -22,7 +22,7 @@
             <Button Name="adultTicketMinus" Content="-" Background="White" HorizontalAlignment="Left" Margin="243,102,0,0" VerticalAlignment="Top" Width="40" Height="37" FontSize="25" Click="adultTicketMinus_Click" Foreground="#FF707070"/>
             <Button Name="youthTicketMinus" Content="-" Background="White" HorizontalAlignment="Left" Margin="243,202,0,0" VerticalAlignment="Top" Width="40" Height="37" FontSize="25" Click="youthTicketMinus_Click" Foreground="#FF707070"/>
             <Button Name="youthTicketPlus" Content="+" Background="White" HorizontalAlignment="Left" Margin="353,202,0,0" VerticalAlignment="Top" Width="40" Height="37" FontSize="25" Click="youthTicketPlus_Click" Foreground="#FF707070"/>
-            <Rectangle Fill="#B83A3F" Panel.ZIndex="-1" HorizontalAlignment="Left" Height="71" Stroke="{x:Null}" StrokeThickness="0.5" VerticalAlignment="Top" Width="450"/>
+            <Rectangle Fill="#B83A3F" Panel.ZIndex="-1" HorizontalAlignment="Left" Height="65" Stroke="{x:Null}" StrokeThickness="0.5" VerticalAlignment="Top" Width="450"/>
             <Rectangle Fill="#FFACACAC" HorizontalAlignment="Left" Height="1" Stroke="{x:Null}" StrokeThickness="0.5" VerticalAlignment="Top" Width="450" Margin="0,169,0,0"/>
             <Rectangle Fill="#FFACACAC" HorizontalAlignment="Left" Height="1" Stroke="{x:Null}" StrokeThickness="0.5" VerticalAlignment="Top" Width="452" Margin="0,269,-2,0"/>
             <Label Content="Adult Monthly Pass" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="22,277,0,0" TextOptions.TextFormattingMode="Display" FontSize="20"/>
@@ -42,8 +42,8 @@
             <Button Name="lowIncomeMinus" Content="-" Background="White" HorizontalAlignment="Left" Margin="243,502,0,0" VerticalAlignment="Top" Width="40" Height="37" FontSize="25" Click="lowIncomeMinus_Click" Foreground="#FF707070"/>
             <Label Name="lowIncomeAmountLabel" Content="0" HorizontalAlignment="Left" Margin="306,504,0,0" VerticalAlignment="Top" FontSize="20"/>
             <Button Name="lowIncomePlus" Content="+" Background="White" HorizontalAlignment="Left" Margin="353,502,0,0" VerticalAlignment="Top" Width="40" Height="37" FontSize="25" Click="lowIncomePlus_Click" Foreground="#FF707070"/>
-            <Rectangle Name="botRect" Fill="#FFACACAC" HorizontalAlignment="Left" Height="1" Stroke="{x:Null}" StrokeThickness="0.5" VerticalAlignment="Top" Width="442" Margin="10,569,-2,0"/>
-            <Button Name="checkoutButton" Content="Checkout $0.00" Foreground="white" Background="#B83A3F" HorizontalAlignment="Left" Margin="28,588,0,0" VerticalAlignment="Top" Width="389" Height="58" FontSize="30" Click="checkoutButton_Click" BorderBrush="#FFB83A3F"/>
+            <Rectangle Name="botRect" Fill="#FFACACAC" HorizontalAlignment="Left" Height="1" Stroke="{x:Null}" StrokeThickness="0.5" VerticalAlignment="Top" Width="522" Margin="-70,569,-2,0"/>
+            <Button Style="{StaticResource RedButton}" Name="checkoutButton" Content="Checkout $0.00" Foreground="white" Background="#B83A3F" HorizontalAlignment="Left" Margin="50,592,0,0" VerticalAlignment="Top" Width="354" Height="49" FontSize="22" Click="checkoutButton_Click" BorderBrush="#FFB83A3F"/>
 
 
         </Grid>
