--- a/TransitHubXAML/paymentInformationPage.xaml
+++ b/TransitHubXAML/paymentInformationPage.xaml
@@ -8,17 +8,17 @@
       d:DesignHeight="800" d:DesignWidth="450"
       Title="paymentInformationPage">
 
-    
+
     <Grid>
-        <Label Content="Payment Information" Foreground="White" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="75,-3,-110,0" Height="58" Width="477" FontSize="30" FontFamily="Open Sans"/>
-        <Label MouseDown="Label_MouseDown" Content="&lt;" Foreground="White" HorizontalAlignment="Left" Margin="26,-20,0,0" VerticalAlignment="Top" Height="75" Width="57" FontSize="50"/>
-        <Rectangle Fill="#B83A3F" Panel.ZIndex="-1" HorizontalAlignment="Left" Height="55" Stroke="{x:Null}" StrokeThickness="0.5" VerticalAlignment="Top" Width="442"/>
-        <Label Name="cardholderLabel" Content="Cardholder Name:" HorizontalAlignment="Left" Margin="26,77,0,0" VerticalAlignment="Top" Width="212" FontWeight="Bold" FontSize="20"/>
-        <TextBox Name="cardHolder" HorizontalAlignment="Left" Height="26" Margin="26,119,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="393"/>
-        <Label Name="cardNumberLabel" Content="Card Number:" HorizontalAlignment="Left" Margin="26,181,0,0" VerticalAlignment="Top" Width="212" FontWeight="Bold" FontSize="20"/>
-        <TextBox Name="cardNumber" HorizontalAlignment="Left" Height="26" Margin="26,223,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="393"/>
-        <Label Name="dateLabel" Content="Date:" HorizontalAlignment="Left" Margin="26,296,0,0" VerticalAlignment="Top" Width="72" FontWeight="Bold" FontSize="20"/>
-        <ComboBox Name="monthBox" HorizontalAlignment="Left" Margin="26,333,0,0" VerticalAlignment="Top" Width="72">
+        <Label Content="Payment Information" Foreground="White" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="88,12,-115,0" Height="58" Width="477" FontSize="30" FontFamily="Open Sans"/>
+        <Image MouseDown="Label_MouseDown" HorizontalAlignment="Left" Height="40" VerticalAlignment="Top" Width="69" Source="Resources/back-arrow-white.png" Margin="30,20,0,0"/>
+        <!--<Label MouseDown="Label_MouseDown" Content="&lt;" Foreground="White" HorizontalAlignment="Left" Margin="26,-10,0,0" VerticalAlignment="Top" Height="75" Width="57" FontSize="50"/>-->
+        <Rectangle Fill="#B83A3F" Panel.ZIndex="-1" HorizontalAlignment="Left" Height="65" Stroke="{x:Null}" StrokeThickness="0.5" VerticalAlignment="Top" Width="450"/>
+        <Label Name="cardholderLabel" Content="Cardholder Name" HorizontalAlignment="Left" Margin="30,122,0,0" VerticalAlignment="Top" Width="212" FontSize="24"/>
+        <TextBox Name="cardHolder" HorizontalAlignment="Left" Height="42" Margin="30,164,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="393" FontSize="24"/>
+        <Label Name="cardNumberLabel" Content="Card Number" HorizontalAlignment="Left" Margin="30,226,0,0" VerticalAlignment="Top" Width="212" FontSize="24"/>
+        <TextBox Name="cardNumber" HorizontalAlignment="Left" Height="42" Margin="30,268,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="393" FontSize="24"/>
+        <ComboBox Name="monthBox" HorizontalAlignment="Left" Margin="30,380,0,0" VerticalAlignment="Top" Height="42" Width="72" FontSize="24">
             <ComboBoxItem Content="01"></ComboBoxItem>
             <ComboBoxItem Content="02"></ComboBoxItem>
             <ComboBoxItem Content="03"></ComboBoxItem>
@@ -32,19 +32,20 @@
             <ComboBoxItem Content="11"></ComboBoxItem>
             <ComboBoxItem Content="12"></ComboBoxItem>
         </ComboBox>
-        <Label Content="/" HorizontalAlignment="Left" Margin="114,328,0,0" VerticalAlignment="Top" Width="24" FontWeight="Bold" FontSize="20"/>
-        <ComboBox Name="yearBox" HorizontalAlignment="Left" Margin="143,333,0,0" VerticalAlignment="Top" Width="86">
+        <ComboBox Height="42" Name="yearBox" HorizontalAlignment="Left" Margin="136,380,0,0" VerticalAlignment="Top" Width="86" FontSize="24">
             <ComboBoxItem Content="2021"></ComboBoxItem>
             <ComboBoxItem Content="2022"></ComboBoxItem>
             <ComboBoxItem Content="2023"></ComboBoxItem>
             <ComboBoxItem Content="2024"></ComboBoxItem>
             <ComboBoxItem Content="2025"></ComboBoxItem>
         </ComboBox>
-        <Label Name="cvvLabel" Content="CVV:" HorizontalAlignment="Left" Margin="255,296,0,0" VerticalAlignment="Top" Width="72" FontWeight="Bold" FontSize="20"/>
-        <TextBox Name="cvvIn" HorizontalAlignment="Left" Height="26" Margin="255,329,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="164"/>
-        <Label Name="zipLabel" Content="ZIP Code:" HorizontalAlignment="Left" Margin="26,395,0,0" VerticalAlignment="Top" Width="203" FontWeight="Bold" FontSize="20"/>
-        <TextBox Name="zipIn" HorizontalAlignment="Left" Height="26" Margin="26,453,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="164"/>
-        <Button Click="Button_Click" Content="Continue and Pay" Foreground="white" Background="#B83A3F" HorizontalAlignment="Left" Margin="59,529,0,0" VerticalAlignment="Top" Width="328" Height="44" FontSize="30"/>
+        <Label Name="cvvLabel" Content="CVV" HorizontalAlignment="Left" Margin="258,338,0,0" VerticalAlignment="Top" Width="72" FontSize="24"/>
+        <TextBox Name="cvvIn" HorizontalAlignment="Left" Height="42" Margin="259,380,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="164" FontSize="24"/>
+        <Label Name="zipLabel" Content="ZIP Code" HorizontalAlignment="Left" Margin="30,458,0,0" VerticalAlignment="Top" Width="203" FontSize="24"/>
+        <TextBox Name="zipIn" HorizontalAlignment="Left" Height="42" Margin="30,505,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="164" FontSize="24"/>
+        <Button Style="{StaticResource RedButton}" Click="Button_Click" Content="Continue and Pay" Foreground="white" Background="#B83A3F" HorizontalAlignment="Left" Margin="50,583,0,0" VerticalAlignment="Top" Width="354" Height="49" FontSize="22"/>
+        <Label x:Name="dateLabel_Copy" Content="Month" HorizontalAlignment="Left" Margin="25,338,0,0" VerticalAlignment="Top" Width="87" FontSize="24"/>
+        <Label x:Name="dateLabel_Copy1" Content="Year" HorizontalAlignment="Left" Margin="131,338,0,0" VerticalAlignment="Top" Width="87" FontSize="24"/>
 
     </Grid>
 </Page>
