--- a/TransitHubXAML/cartPage.xaml
+++ b/TransitHubXAML/cartPage.xaml
@@ -42,8 +42,8 @@
             <Button Name="lowIncomeMinus" Content="-" Background="White" HorizontalAlignment="Left" Margin="243,502,0,0" VerticalAlignment="Top" Width="40" Height="37" FontSize="25" Click="lowIncomeMinus_Click" Foreground="#FF707070"/>
             <Label Name="lowIncomeAmountLabel" Content="0" HorizontalAlignment="Left" Margin="306,504,0,0" VerticalAlignment="Top" FontSize="20"/>
             <Button Name="lowIncomePlus" Content="+" Background="White" HorizontalAlignment="Left" Margin="353,502,0,0" VerticalAlignment="Top" Width="40" Height="37" FontSize="25" Click="lowIncomePlus_Click" Foreground="#FF707070"/>
-            <Rectangle Name="botRect" Fill="#FFACACAC" HorizontalAlignment="Left" Height="1" Stroke="{x:Null}" StrokeThickness="0.5" VerticalAlignment="Top" Width="522" Margin="-70,569,-2,0"/>
-            <Button Style="{StaticResource RedButton}" Name="checkoutButton" Content="Checkout $0.00" Foreground="white" Background="#B83A3F" HorizontalAlignment="Left" Margin="50,592,0,0" VerticalAlignment="Top" Width="354" Height="49" FontSize="22" Click="checkoutButton_Click" BorderBrush="#FFB83A3F"/>
+            <Rectangle Name="botRect" Fill="#FFACACAC" HorizontalAlignment="Left" Height="1" Stroke="{x:Null}" StrokeThickness="0.5" VerticalAlignment="Top" Width="442" Margin="10,569,-2,0"/>
+            <Button Name="checkoutButton" Content="Checkout $0.00" Style="{StaticResource RedButton}" Foreground="white" Background="#B83A3F" HorizontalAlignment="Left" Margin="28,588,0,0" VerticalAlignment="Top" Width="389" Height="58" FontSize="30" Click="checkoutButton_Click" BorderBrush="#FFB83A3F"/>
 
 
         </Grid>
